<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProductRegActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/addProducts"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#25707070" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_menu"
            style="@style/dropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/selectStore"
            app:startIconTint="@android:color/darker_gray">

            <AutoCompleteTextView
                android:id="@+id/tx_store"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_category"
            style="@style/dropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/selectCategory"
            app:startIconTint="@android:color/darker_gray">

            <AutoCompleteTextView
                android:id="@+id/tx_category"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_name"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/name"
            app:startIconDrawable="@drawable/ic_products"
            app:startIconTint="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tx_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_quantity"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/quantity"
            app:startIconDrawable="@drawable/ic_format_list_numbered_rtl_black_18dp"
            app:startIconTint="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tx_quantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_stock"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/stock"
            app:startIconDrawable="@drawable/ic_bubble_chart_24px"
            app:startIconTint="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tx_stock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_price"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/price"
            app:startIconDrawable="@drawable/ic_money_24px"
            app:startIconTint="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tx_price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_description"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/description"
            app:startIconDrawable="@drawable/ic_description_24px"
            app:startIconTint="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tx_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sSubmitBtn"
        android:onClick="productOnclick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:text="@string/submit"
        android:textSize="18sp" />

</RelativeLayout>