<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StoreRegActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/add_store"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#25707070" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_menu"
            style="@style/dropDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/select_franchise"
            app:startIconTint="@android:color/darker_gray">

            <AutoCompleteTextView
                android:id="@+id/tx_franchise"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_name"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/name"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:startIconTint="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tx_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_address"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/address"
            app:startIconDrawable="@drawable/ic_location"
            app:startIconTint="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tx_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_email"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/storeemail"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tx_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ly_phone"
            style="@style/LoginTextInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/phone"
            app:startIconDrawable="@drawable/ic_agenda"
            app:startIconTint="@android:color/darker_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tx_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone" />


        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sSubmitBtn"
        android:onClick="btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        android:text="@string/submit"
        android:textSize="18sp" />

</RelativeLayout>